src/snapshots/purring_lib__parser__tests__typ_higher_kinded.snap
---
source: src/parser.rs
expression: "p_typ(\"Foo bar biz\")"
---
10 of 10
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::App
    Typ::App
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (2, 5)->(2, 8)
     Typ::Var
      Name
       (2, 9)->(2, 12)
    Typ::Var
     Name
      (2, 13)->(2, 16)
===
