src/snapshots/purring_lib__parser__tests__typ_row.snap
---
source: src/parser.rs
expression: "p_typ(\" ( a :: {} , a :: {}) \")"
---
18 of 18
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Row
    (2, 0)->(2, 7)
     Row
       (
        Label
         (2, 8)->(2, 9)
        Typ::Record
         (2, 13)->(2, 17)
          Row
           NULL
       )
       (
        Label
         (2, 18)->(2, 19)
        Typ::Record
         (2, 23)->(2, 26)
          Row
           NULL
       )
      NULL
===
