src/snapshots/purring_lib__parser__tests__typ_row_kind_ambiguity_row.snap
---
source: src/parser.rs
expression: "p_typ(\"( a :: A )\")"
---
12 of 12
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Row
    (2, 0)->(2, 6)
     Row
       (
        Label
         (2, 7)->(2, 8)
        Typ::Constructor
         QProperName
          NULL
          ProperName
           (2, 12)->(2, 13)
       )
      NULL
===
