src/snapshots/purring_lib__parser__tests__typ_row_kind_ambiguity_typ.snap
---
source: src/parser.rs
expression: "p_typ(\"A :: Type\")"
---
10 of 10
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Kinded
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 5)->(2, 6)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 10)->(2, 14)
===
