src/snapshots/purring_lib__parser__tests__typ_var_bindings_a.snap
---
source: src/parser.rs
expression: "p_typ(\"a\")"
---
8 of 8
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Var
    Name
     (2, 5)->(2, 6)
===
