src/snapshots/purring_lib__parser__tests__typ_var_bindings_a_at.snap
---
source: src/parser.rs
expression: "p_typ_var_binding(\"@a\")"
---
12 of 12
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 13)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Forall
     TypVarBinding
      Name
       (2, 13)->(2, 14)
      NULL
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 16)->(2, 20)
===
