src/snapshots/purring_lib__parser__tests__typ_var_bindings_a_at_paren.snap
---
source: src/parser.rs
expression: "p_typ_var_binding(\"( @a )\")"
---
14 of 14
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 13)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Forall
     TypVarBinding
      Name
       (2, 15)->(2, 16)
      NULL
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 20)->(2, 24)
===
