src/snapshots/purring_lib__parser__tests__typ_var_bindings_a_at_paren_kind.snap
---
source: src/parser.rs
expression: "p_typ_var_binding(\"( @a :: Kind )\")"
---
16 of 16
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 13)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Forall
     TypVarBinding
      Name
       (2, 15)->(2, 16)
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (2, 20)->(2, 24)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 28)->(2, 32)
===
